# immersification-demoConstruct

./: .gitattributes  .gitignore  Gemfile  README.md  _config.yml  index.md  pyproject.toml
capture-client-mobile/app/android/: info.txt.in
capture-client-mobile/app/ios/: NetworkingManager.swift  TimerManager.swift  utilities.swift
captureClient/app/ios/: .gitignore  (+3 more)
edgeServer/: .gitignore  democonstruct.sqlite3  democonstructdb.reconstructions.json  democonstructdb.rooms.json  installed_packages.txt  package-lock.json  requirements.txt  uploadScheduler.sh
edgeServer/src/: main.py  serverConfig.py  serverGlobals.py
editing-client-web/: package-lock.json  package.json  vite.config.ts
editing-client-web/amplify/: team-provider-info.json
editing-client-web/public/: EC_LobbyUI_v1.json  EC_LobbyUI_v2.json  EC_LobbyUI_v3.json  EC_MarkerCollab_UI.json  EC_MarkerCollab_UI_v2.json  VR-AssetBrowser.json  VR-AssetBrowser_v2.json  VR-MarkerBrowser.json  editingGUI.json  editingGUI_V0.4a.json  index.html  inspectorUI_alpha_0.1.json
editing-client-web/src/: App.tsx  main.tsx
editingClient/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.lib.json  vite.config.ts
editingClient/src/: App.tsx  EditingMode.tsx  Exports.ts  config.ts  main.tsx
python-server/: .gitignore  democonstructdb.reconstructions.json  package-lock.json  requirements.txt
python-server/app/: main.py  model_io.py  reconstruction.py  server_endpoint_tester.py  server_globals.py  trimesh_tools.py  utils.py
scripts/: upload-dataset.sh
(+386 files in other folders)
